# process_brain_for_printing

./: .gitignore  CLAUDE.md  README.md  process_brain_for_printing.py  pyproject.toml  pytest.ini  requirements.txt
brain_for_printing/: __init__.py  aseg_utils.py  cli_brain_mask_surface.py  cli_brainstem.py  cli_color.py  cli_combine_structures.py  cli_cortical_surfaces.py  cli_hollow_ventricles.py  cli_mni.py  cli_multi_material_slab_components.py  cli_overlay.py  cli_slab_slices.py  cli_t1.py  color_utils.py  config_utils.py  constants.py  five_tt_utils.py  io_utils.py  log_utils.py  mesh_utils.py  surfaces.py  surfgen_utils.py  volumetric_utils.py  warp_utils.py
tests/: conftest.py
tests/integration/: test_cortical_surfaces.py  test_five_tt_workflow.py
tests/unit/: test_aseg_utils.py  test_five_tt_utils.py
