[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_for_printing"
version = "0.1.0"
description = "Generate 3D-printable brain surfaces (pial + brainstem) in T1/MNI space"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name="Claude J. Bajada", email="claude.bajada@um.edu.mt" }
]
keywords = ["3D-printing", "Neuroimaging", "NIfTI", "Freesurfer", "Brain"]
# Python version requirement (example: 3.7+):

# Additional metadata (classifiers, etc.)
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS"
]

# Dependencies automatically installed by pip
dependencies = [
  "numpy>=1.20.0",
  "nibabel>=3.2.0",
  "scipy",
  "scikit-image",
  "trimesh>=3.9.0",
  "matplotlib",
  "vtk>=9.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0"
]

[project.scripts]
# CLI entry points:
brain_for_printing_color = "brain_for_printing.cli_color:main"
brain_for_printing_slab_slices = "brain_for_printing.cli_slab_slices:main"
brain_for_printing_overlay = "brain_for_printing.cli_overlay:main"
brain_for_printing_brain_mask_surface = "brain_for_printing.cli_brain_mask_surface:main"
brain_for_printing_cortical_surfaces = "brain_for_printing.cli_cortical_surfaces:main"

[tool.setuptools]
packages = ["brain_for_printing"]
