[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain_for_printing"
version = "0.1.0"
description = "Generate 3D-printable brain surfaces (pial + brainstem) in T1/MNI space"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    { name="Claude J. Bajada", email="claude.bajada@um.edu.mt" }
]
keywords = ["3D-printing", "Neuroimaging", "NIfTI", "Freesurfer", "Brain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS"
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "nibabel>=3.2.0",
    "trimesh>=3.9.0",
    "vtk>=9.0.0",
    "nilearn>=0.8.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.62.0",
    "pybids>=0.15.0",
    "nipy>=0.4.0",
    "dipy>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]

[project.scripts]
brain_for_printing_color = "brain_for_printing.cli_color:main"
brain_for_printing_slab_slices = "brain_for_printing.cli_slab_slices:main"
brain_for_printing_overlay = "brain_for_printing.cli_overlay:main"
brain_for_printing_brain_mask_surface = "brain_for_printing.cli_brain_mask_surface:main"
brain_for_printing_cortical_surfaces = "brain_for_printing.cli_cortical_surfaces:main"
brain_for_printing_slabs = "brain_for_printing.cli_multi_material_slab_components:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=brain_for_printing"
